--- a/projects/03_deep_learning/sequence_modelling/sentiment_analysis_rnn/sentiment_analysis_rnn.ipynb
+++ b/projects/03_deep_learning/sequence_modelling/sentiment_analysis_rnn/sentiment_analysis_rnn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNVfpMjwebRfikw04IkRRze",
+      "authorship_tag": "ABX9TyMyWbbEz2iOeXXnOrkXhMQC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2768,11 +2768,22 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Fix GitHub rendering error: remove empty metadata.widgets\n",
+        "import nbformat, json, os, glob\n",
+        "\n",
+        "# Colab'da çalışma dizinindeki tüm .ipynb dosyalarını tara\n",
+        "for path in glob.glob(\"sentiment_analysis_rnn.ipynb\"):\n",
+        "    nb = nbformat.read(path, as_version=nbformat.NO_CONVERT)\n",
+        "    if \"widgets\" in nb[\"metadata\"]:\n",
+        "        nb[\"metadata\"].pop(\"widgets\")\n",
+        "        nbformat.write(nb, path)\n",
+        "        print(f\"Fixed: {path}\")\n"
+      ],
       "metadata": {
         "id": "0eei1AJ2MgQU"
       },
-      "execution_count": 53,
+      "execution_count": 55,
       "outputs": []
     }
   ]
